- CSS refinements as controls stopped working due to -1 z-index

--- a/styles/styles.styl
+++ b/styles/styles.styl
@@ -18,9 +18,16 @@ body
 	font-size 75%
 	color #FFFFFF
 
+.dg.ac
+	z-index 1!important
+
+#viewport > *
+	z-index 1
+	position relative
+
 body > canvas
 	position fixed
-	z-index -1
+	z-index 0
 
 h1 
 	float left
